charts/steamcmd/app-job.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steamcmd-job
  labels:
    app: steamcmd-job
spec:
  replicas: 2
  selector:
    matchLabels:
      app: steamcmd-job
  template:
    metadata:
      labels:
        app: steamcmd-job
    spec:
      containers:
        - name: steamcmd-job
          image: steamcmd/api:rewrite
          command: ["celery"]
          args: ["-A", "job", "worker", "--loglevel=info", "--concurrency=10", "--beat"]
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
