charts/steamcmd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steamcmd-api
  labels:
    app: steamcmd-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: steamcmd-api
  template:
    metadata:
      labels:
        app: steamcmd-api
    spec:
      containers:
        - name: steamcmd-api
          image: steamcmd/api:latest
          ports:
            - containerPort: 8000
              name: tcp-svc
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /v1/info/740
              port: tcp-svc
            failureThreshold: 3
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 3
            terminationGracePeriodSeconds: 3
          startupProbe:
            httpGet:
              path: /v1/info/740
              port: tcp-svc
            failureThreshold: 2
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 3
            terminationGracePeriodSeconds: 3
