charts/steamcmd/redis.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: steamcmd-redis
spec:
  selector:
    matchLabels:
      app: steamcmd-redis
  serviceName: steamcmd-redis-svc
  replicas: 1
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: steamcmd-redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: steamcmd-redis
        image: bitnami/redis:6.0
        ports:
          - containerPort: 6379
            name: tcp-svc
      volumes:
        - name: redis-vol
          persistentVolumeClaim:
            claimName: redis-pvc


---
apiVersion: v1
kind: Service
metadata:
  name: steamcmd-redis-svc
spec:
  selector:
    app: steamcmd-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: tcp-svc
