charts/steamcmd/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: steamcmd-api
spec:
  selector:
    app: steamcmd-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
