charts/steamcmd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: steamcmd-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: steamcmd.koudijs.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  steamcmd-api
                port:
                  number: 80
  tls:
    - secretName: steamcmd-api-tls
      hosts:
        - steamcmd.koudijs.me
